API-110: format errors correctly for the API

--- a/src/Pim/Bundle/CatalogBundle/Resources/config/validation/attribute.yml
+++ b/src/Pim/Bundle/CatalogBundle/Resources/config/validation/attribute.yml
@@ -168,7 +168,8 @@ Pim\Bundle\CatalogBundle\Entity\AttributeTranslation:
             - Length:
                 max: 100
         locale:
-            - Pim\Component\Catalog\Validator\Constraints\Locale: ~
+            - Pim\Component\Catalog\Validator\Constraints\Locale:
+                propertyPath: labels
 
 Pim\Bundle\CatalogBundle\Entity\AttributeOption:
     constraints:
