--- a/src/Pim/Bundle/CatalogBundle/Resources/config/validation/category.yml
+++ b/src/Pim/Bundle/CatalogBundle/Resources/config/validation/category.yml
@@ -21,4 +21,5 @@ Pim\Bundle\CatalogBundle\Entity\CategoryTranslation:
             - Length:
                 max: 100
         locale:
-            - Pim\Component\Catalog\Validator\Constraints\Locale: ~
+            - Pim\Component\Catalog\Validator\Constraints\Locale:
+                propertyPath: labels
