--- a/src/Pim/Bundle/CatalogBundle/Resources/config/validation/family.yml
+++ b/src/Pim/Bundle/CatalogBundle/Resources/config/validation/family.yml
@@ -23,4 +23,5 @@ Pim\Bundle\CatalogBundle\Entity\FamilyTranslation:
             - Length:
                 max: 100
         locale:
-            - Pim\Component\Catalog\Validator\Constraints\Locale: ~
+            - Pim\Component\Catalog\Validator\Constraints\Locale:
+                propertyPath: labels
