--- a/src/Pim/Bundle/ApiBundle/Resources/config/routing/product.yml
+++ b/src/Pim/Bundle/ApiBundle/Resources/config/routing/product.yml
@@ -13,6 +13,11 @@ pim_api_product_create:
     defaults: { _controller: pim_api.controller.product:createAction, _format: json }
     methods: [POST]
 
+pim_api_product_partial_update:
+    path: /products/{code}
+    defaults: { _controller: pim_api.controller.product:partialUpdateAction, _format: json }
+    methods: [PATCH]
+
 pim_api_product_delete:
     path: /products/{code}
     defaults: { _controller: pim_api.controller.product:deleteAction, _format: json }
