--- a/src/Pim/Bundle/EnrichBundle/Resources/config/attribute_icons.yml
+++ b/src/Pim/Bundle/EnrichBundle/Resources/config/attribute_icons.yml
@@ -13,6 +13,7 @@ parameters:
         pim_catalog_boolean:          check
         pim_catalog_date:             calendar
         pim_catalog_metric:           beaker
+        pim_catalog_text_collection:  book
 
         pim_reference_data_multiselect:  tags
         pim_reference_data_simpleselect: tag
