--- a/src/Pim/Bundle/EnrichBundle/Resources/config/form_extensions/product_edit.yml
+++ b/src/Pim/Bundle/EnrichBundle/Resources/config/form_extensions/product_edit.yml
@@ -262,3 +262,4 @@ attribute_fields:
     akeneo-text-field:             pim/text-field
     akeneo-textarea-field:         pim/textarea-field
     akeneo-wysiwyg-field:          pim/wysiwyg-field
+    akeneo-text-collection-field:  pim/text-collection-field
