--- a/src/Pim/Bundle/CatalogBundle/Resources/config/validators.yml
+++ b/src/Pim/Bundle/CatalogBundle/Resources/config/validators.yml
@@ -38,7 +38,7 @@ parameters:
     pim_catalog.validator.constraint_guesser.price_collection.class:       Pim\Component\Catalog\Validator\ConstraintGuesser\PriceCollectionGuesser
     pim_catalog.validator.constraint_guesser.metric.class:                 Pim\Component\Catalog\Validator\ConstraintGuesser\MetricGuesser
     pim_catalog.validator.constraint_guesser.identifier.class:             Pim\Component\Catalog\Validator\ConstraintGuesser\IdentifierGuesser
-    pim_catalog.validator.constraint_guesser.text_collection.class:        Pim\Component\Catalog\Validator\ConstraintGuesser\TextCollectionGuesser
+    pim_catalog.validator.constraint_guesser.constraint_collection.class:  Pim\Component\Catalog\Validator\ConstraintGuesser\ConstraintCollectionGuesser
 
     pim_catalog.validator.mapping.delegating_class_metadata_factory.class: Pim\Component\Catalog\Validator\Mapping\DelegatingClassMetadataFactory
     pim_catalog.validator.mapping.product_value_metadata_factory.class:    Pim\Component\Catalog\Validator\Mapping\ProductValueMetadataFactory
@@ -278,9 +278,9 @@ services:
         tags:
             - { name: pim_catalog.constraint_guesser.attribute }
 
-    pim_catalog.validator.constraint_guesser.text_collection:
+    pim_catalog.validator.constraint_guesser.constraint_collection:
         public: false
-        class: '%pim_catalog.validator.constraint_guesser.text_collection.class%'
+        class: '%pim_catalog.validator.constraint_guesser.constraint_collection.class%'
         tags:
             - { name: pim_catalog.constraint_guesser.attribute }
 
