PIM-6101: use Datagrid Formatter and not Presenter

--- a/src/Pim/Bundle/DataGridBundle/Resources/config/attribute_types.yml
+++ b/src/Pim/Bundle/DataGridBundle/Resources/config/attribute_types.yml
@@ -175,3 +175,13 @@ parameters:
                     attr:
                         empty_choice: true
         sorter:          ~
+    pim_datagrid.product.attribute_type.pim_catalog_text_collection:
+        column:
+            type:          product_value_text_collection
+            selector:      product_value_base
+            frontend_type: html
+            template:      PimDataGridBundle:Property:text_collection.html.twig
+        filter:
+            type:        product_value_string
+            ftype:       string
+        sorter:          ~
