--- a/app/config/pim_parameters.yml
+++ b/app/config/pim_parameters.yml
@@ -46,3 +46,5 @@ parameters:
 
     # Maximum number of items returned in the paginated responses of the API
     api_pagination_limit_max: 100
+    # Maximum lenght of the resource's json representation when updating a list of ressources
+    api_buffer_size: 100
