create a sub request

--- a/src/Pim/Bundle/ApiBundle/Resources/config/controllers.yml
+++ b/src/Pim/Bundle/ApiBundle/Resources/config/controllers.yml
@@ -90,8 +90,7 @@ services:
             - '@pim_catalog.saver.product'
             - '@router'
             - '@pim_catalog.comparator.filter.product'
-            - '@fos_rest.serializer.exception_normalizer.symfony'
-            - '@pim_external_api_exception_serializer'
             - '@pim_catalog.validator.unique_value_set'
+            - '@http_kernel'
             - '%api_buffer_size%'
             - 'https://docs.akeneo.com/%s/reference/standard_format/products.html'
