--- a/src/Pim/Bundle/ApiBundle/Resources/config/controllers.yml
+++ b/src/Pim/Bundle/ApiBundle/Resources/config/controllers.yml
@@ -93,5 +93,6 @@ services:
             - '@fos_rest.serializer.exception_normalizer.symfony'
             - '@pim_external_api_exception_serializer'
             - '@pim_catalog.validator.unique_value_set'
+            - '@akeneo_storage_utils.doctrine.object_detacher'
             - '%api_buffer_size%'
             - 'https://docs.akeneo.com/%s/reference/standard_format/products.html'
